End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=localhost;Initial Catalog=skinet;Integrated Security=true;"
-  }
+  },
+  "ApiUrl":"https://localhost:5001/"
 }
