--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=localhost;Initial Catalog=skinet;Integrated Security=true;"
+    "DefaultConnection":"Data source=localhost;Initial Catalog=skinet;Integrated Security=true;",
+    "Redis":"localhost"
   },
   "ApiUrl":"https://localhost:5001/"
 }
