--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=localhost;Initial Catalog=skinet;Integrated Security=true;",
-    "Redis":"localhost"
+    "Redis":"localhost",
+    "IdentityConnection":"Data source=localhost;Initial Catalog=skinetidentity;Integrated Security=true;"
   },
-  "ApiUrl":"https://localhost:5001/"
+  "ApiUrl":"https://localhost:5001/",
+  "Token":{
+    "Key":"super secret key",
+    "Issuer": "https://localhost:5001"
+  }
 }
